--- a/index.html
+++ b/index.html
@@ -62,31 +62,6 @@
             logoutBtn.style.display = 'none';
         }
     </script>
-    <!-- 添加模态框 -->
-<div class="modal fade" id="welcomeModal" tabindex="-1" aria-labelledby="welcomeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="welcomeModalLabel">欢迎来到815班级网站！</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p>请选择您当前的浏览设备：</p>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-primary" onclick="window.location.href='https://celeste946.github.io/Mobilde_iphon815/index'">移动端版本</button>
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal">PC端</button>
-        </div>
-      </div>
-    </div>
-</div>
-<script>
-    // 页面加载时显示模态框
-    window.onload = function() {
-        const welcomeModal = new bootstrap.Modal(document.getElementById('welcomeModal'));
-        welcomeModal.show();
-    }
-</script>
 
 
     <!-- 导航栏 -->
@@ -177,7 +152,7 @@
             </div>
             <div class="announcement-content">
               <div class="scrolling-text">
-                系统公告：建议使用新地址，全新高速加载数据，速度更快，稳定性更强！地址：xinc815.pages.dev
+                系统公告：服务器已转移新服务器，全新高速加载数据，速度更快，稳定性更强！地址：xinc815.pages.dev
               </div>
             </div>
           </div>
@@ -299,10 +274,6 @@
                     </video>
                     <video width="400" height="440" controls> 
                         <source src="/mmexport1746949439500.mp4" type="video/mp4">
-                        您的浏览器不支持视频播放。
-                    </video>
-                    <video width="400" height="440" controls> 
-                        <source src="/stodownload.mp4" type="video/mp4">
                         您的浏览器不支持视频播放。
                     </video>
                 </div>
