--- a/online_ai_feature.html
+++ b/online_ai_feature.html
@@ -48,7 +48,7 @@
             <div class="flex items-center space-x-4">
                 <a href="#" class="text-gray-600 hover:text-gray-800">首页</a>
                 <a href="#" class="text-gray-600 hover:text-gray-800">功能介绍</a>
-                <a href="./ai对话.html" class="text-gray-600 hover:text-gray-800">试用体验</a>
+                <a href="/chart.html" class="text-gray-600 hover:text-gray-800">试用体验</a>
                 
                 <!-- 通知铃铛 -->
                 <div class="relative">
@@ -196,7 +196,7 @@
         <div class="container mx-auto px-4 text-center">
             <h1 class="text-4xl font-bold mb-4">释放在线 AI 无限潜力</h1>
             <p class="text-lg mb-8">借助先进的在线 AI 功能，革新你的工作与生活方式。</p>
-            <a href="./ai对话.html" class="bg-white text-purple-600 py-3 px-6 rounded-full hover:bg-gray-100 transition duration-300">立即体验</a>
+            <a href="/chart.html" class="bg-white text-purple-600 py-3 px-6 rounded-full hover:bg-gray-100 transition duration-300">立即体验</a>
         </div>
     </section>
 
