--- a/Main page.html
+++ b/Main page.html
@@ -9,7 +9,7 @@
     <div class="card-content">
         <div class="card">
             <h1>总部提示公告</h1>
-            <p>5月10起号统一使用此<a href="https://xinc815.pages.dev/">https://xinc815.pages.dev/</a>路线</p>
+            <p>5月10起号统一使用此<a style="color: rgb(74, 74, 247);" href="https://xinc815.pages.dev/">https://xinc815.pages.dev/</a>路线</p>
             <h2>为什么使用此路线？</h2>
             <p>速度更快还有一些文件转移，之前服务器位置位于"美国洛杉矶"访问时需要大量时间加载数据，导致用户需要等待很久！</p>
             <h1>新路线有什么优势？</h1>
@@ -22,8 +22,8 @@
             </div>
             <!-- 修改按钮容器为flex布局 -->
             <div class="buttons-container">
-                <button class="but">立即跳转路线一</button>
-                <button class="but1" onclick="redirectToNewPage()">立即跳转路线二</button>
+                <button class="but">立即跳转路线一（推荐）</button>
+                <button class="but1" onclick="redirectToNewPage()">立即跳转路线二（速度慢）</button>
             </div>
             <script>
                 document.querySelector('.but').addEventListener('click', function() {
