--- a/Main page.html
+++ b/Main page.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>815网站新线路提示</title>
+    <title>新城学校815空间</title>
 </head>
 <body>
     <div class="card-content">
         <div class="card">
             <h1>总部提示公告</h1>
             <p>线路有更改建议使用这个地址：xinc815.pages.dev部分设备可能无法连接</p>
-            <p id="countdown">页面将在 5 秒后自动跳转...</p>
+            <p id="countdown">页面将在 3 秒后自动跳转...</p>
             <script>
                 function redirectToNewPage() {
-                       window.location.href = 'index.html';
+                       window.location.href = 'thank.html';
                 }
                 
                 // 设置5秒后自动跳转
-                let secondsLeft = 5;
+                let secondsLeft = 3;
                 const countdownElement = document.getElementById('countdown');
                 
                 const timer = setInterval(function() {
